--- a/css/init.scss
+++ b/css/init.scss
@@ -18,7 +18,7 @@
 
 *, *::before, *::after {
 box-sizing: inherit;
-} 
+}
 
 ::cue {
 background-color: var(--main-highlight-color);
@@ -174,6 +174,34 @@ width: 100%;
 color: #ff0000;
 font-style: italic;
 text-decoration: none;
+}
+
+.a11y-info {
+background-color: #0025ff;
+color: #fff;
+padding: 1em;
+
+  a {
+  color: inherit;
+  }
+
+  h2 {
+
+    &::before {
+    background-image: url(/img/a11y-white.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    content: "";
+    display: inline-block;
+    height: 50px;
+    margin-right: .5em;
+    vertical-align: middle;
+    width: 50px;
+    }
+
+  }
+
 }
 
 .btn {
