--- a/css/init.scss
+++ b/css/init.scss
@@ -12,22 +12,21 @@
 */
 
 
-:root {
---main-highlight-color: #6E00EE;
-}
+
+$highlight-color: #6E00EE;
 
 *, *::before, *::after {
 box-sizing: inherit;
 }
 
 ::cue {
-background-color: var(--main-highlight-color);
+background-color: $highlight-color:;
 color: #fff;
 font-size: 1.2em;
 }
 
 a {
-color: var(--main-highlight-color);
+color: $highlight-color:;
 
   &.external {
   background: transparent url(data:image/gif;base64,R0lGODlhCgAKAJECAP///5mZmQAAAAAAACH5BAEAAAIALAAAAAAKAAoAAAIalIMZJgH/1gGJqugQpFzH7TlWJVJMGZ0KwhQAOw==)center right no-repeat;
@@ -52,7 +51,7 @@ padding: 1em;
 }
 
 code {
-background-color: var(--main-highlight-color);
+background-color: $highlight-color:;
 border-radius: 4px;
 color: white;
 display: inline-block;
@@ -68,7 +67,7 @@ line-height: normal;
 
 hr {
 border: 0;
-border-bottom: 1px dashed var(--main-highlight-color);
+border-bottom: 1px dashed $highlight-color:;
 margin: 3em 0 2em;
 }
 
@@ -257,7 +256,7 @@ width: 100%;
 }
 
 #banner {
-background-color: var(--main-highlight-color);
+background-color: $highlight-color:;
 margin: -1em -1em 0;
 padding: .8em 8% .4em;
 
