Fixed button line height.

--- a/css/init.scss
+++ b/css/init.scss
@@ -216,6 +216,7 @@ background-color: #ffcc36;
 border: 0;
 color: #000;
 display: inline-block;
+line-height: normal;
 padding: 15px 25px;
 text-align: center;
 text-decoration: none;
