--- a/css/init.scss
+++ b/css/init.scss
@@ -11,8 +11,6 @@
 
 */
 
-
-
 $highlight-color: #6E00EE;
 
 *, *::before, *::after {
@@ -178,7 +176,7 @@ text-decoration: none;
 .a11y-info {
 background-color: #0025ff;
 color: #fff;
-padding: 1em;
+padding: 1px 1em;
 
   a {
   color: inherit;
