--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
 
       <section id="contribute">
 
-        <h2>Contribute</h2>.
+        <h2>Contribute</h2>
 
         <p><a href="{{ site.repo }}/graphs/contributors">The {{ site.company-name }} UID Team</a></p>
 
