--- a/css/init.scss
+++ b/css/init.scss
@@ -201,7 +201,7 @@ padding: 1px 1em;
   }
 
   code {
-  background-color: darkblue;
+  background-color: #333;
   }
 
   .alert {
@@ -284,7 +284,7 @@ padding: .8em 8% .4em;
     }
 
     span {
-    margin-top: -13px;
+    margin-top: 7px;
     display: block;
     }
 
