--- a/a11y/baseline/init.scss
+++ b/a11y/baseline/init.scss
@@ -12,7 +12,7 @@
 
 */
 
-$highlight-color: #0025ff;
+$highlight-color: #40E8D4;
 
 .section {
 border-radius: 10px;
@@ -47,14 +47,14 @@ overflow-X: auto;
 
         td {
         background-color: $highlight-color;
-        color: #fff;
+        color: #000;
 
           a {
           color: inherit;
 
-            &::after {
+            /* &::after {
             filter: brightness(1000%);
-            }
+          } */
 
           }
 
@@ -71,7 +71,7 @@ overflow-X: auto;
 
     th {
     background-color: $highlight-color;
-    color: #fff;
+    color: #000;
     text-align: center;
     }
 
@@ -96,7 +96,7 @@ overflow-X: auto;
     }
 
     a {
-    color: $highlight-color;
+    color: #000;
     text-decoration: underline;
 
       &[target="_blank"]::after {
