--- a/css/init.scss
+++ b/css/init.scss
@@ -5,6 +5,8 @@
 
   Radancy.dev Styeguide
 
+  Author: Michael "Spell" Spellacy, Email: michael.spellacy@radancy.com, Twitter: @spellacy, GitHub: michaelspellacy
+
   Dependencies: Sass
   Instructions: To run locally, install Sass (https://sass-lang.com/install), CL to directory this file in and run:
   sass --watch init.scss:init.css --style compressed
