margin issue on a11y-info

--- a/css/init.scss
+++ b/css/init.scss
@@ -154,6 +154,7 @@ background-color: #40E8D4;
 border-radius: 5px;
 border: 1px black solid;
 color: #000;
+margin: 1em 0;
 padding: .5em 1em;
 
   a {
