--- a/a11y/extension/init.css
+++ b/a11y/extension/init.css
@@ -4,12 +4,13 @@ min-width: 600px;
 }
 
 h1 {
-margin: 0;
+margin: 0 0 .5em;
 }
 
 ul, ol {
 list-style: none;
 padding: 0;
+margin-top: 0;
 }
 
 ol li {
