--- a/a11y/extension/page.css
+++ b/a11y/extension/page.css
@@ -1,4 +1,14 @@
-.focus-state a:focus, .focus-state *:focus {
-outline: 4px solid orange !important;
-outline-offset: 3px !important;
+.a11y-smoketest-grayscale {
+filter: grayscale(100%) !important;
+-webkit-filter: grayscale(1) !important;
+}
+
+.a11y-smoketest-textspace * {
+line-height:1.5 !important;
+letter-spacing: 0.12em !important;
+word-spacing: 0.16em !important;
+}
+
+.a11y-smoketest-textspace p {
+margin-bottom: 2em !important;
 }
