--- a/a11y/extension/init.scss
+++ b/a11y/extension/init.scss
@@ -46,7 +46,7 @@ padding: 0;
   button {
   background-color: transparent;
   border: 0;
-  display: inline;
+  display: inline-block;
   padding: 0;
   font-size: inherit;
   text-decoration: underline;
