--- a/a11y/extension/init.scss
+++ b/a11y/extension/init.scss
@@ -215,6 +215,14 @@ width: 40px;
 
   #content {
 
+    #inner-content {
+    margin-top: 2em;
+    }
+
+    .loading {
+    color: rebeccapurple;
+    }
+
     h2 {
     display: none;
     }
