--- a/css/init.scss
+++ b/css/init.scss
@@ -57,7 +57,6 @@ border-radius: 4px;
 color: white;
 display: inline-block;
 padding: .2em 1em;
-f60
 word-wrap: break-word;
 }
 
@@ -235,6 +234,8 @@ margin-bottom: 3em;
       margin: 1px;
 
     }
+
+  }
 
 }
 
