--- a/css/init.scss
+++ b/css/init.scss
@@ -231,7 +231,7 @@ margin-bottom: 3em;
     @media(min-width: 680px) {
 
       display: inline-block;
-      margin: 1px;
+      margin: 5px 2.5px;
 
     }
 
