--- a/css/init.scss
+++ b/css/init.scss
@@ -303,6 +303,7 @@ padding: .8em 8% .4em;
 }
 
 #content, #contentinfo, #contribute {
+display: block;
 font-size: 1.05rem;
 margin: 0 auto;
 max-width: 1600px;
