--- a/css/init.scss
+++ b/css/init.scss
@@ -115,7 +115,7 @@ padding: .2em 1em;
 word-wrap: break-word;
 }
 
-h1, h2, h3, h4, h5, h6, caption {
+h1, h2, h3, h4, h5, h6, caption, table {
 font-family: "Campton", $fallback-font;
 font-weight: 400;
 line-height: normal;
