--- a/a11y/extension/init.scss
+++ b/a11y/extension/init.scss
@@ -14,6 +14,10 @@
 @import url("https://radancy.dev/css/init.css");
 @import url("https://radancy.dev/pattern-library/disclosure/init.css");
 
+// Variables
+
+$primary-color: #6F00EF;
+
 a, button {
 
   &.new-tab {
@@ -46,14 +50,14 @@ margin: 1em 0;
 
   figcaption {
   color: #333;
-  font-size: .85em;
+  font-size: .85rem;
   margin: 1em 0 0;
   }
 
 }
 
 footer {
-font-size: .9em;
+font-size: .9rem;
 margin-top: 2em;
 
   ul {
@@ -127,11 +131,15 @@ margin: 0 0 1em;
 }
 
 h2 {
-font-size: 1.1em;
+font-size: 1.2rem;
+}
+
+h3 {
+font-size: 1.1rem;
 }
 
 main {
-font-size: .9em;
+font-size: .9rem;
 }
 
 ul, p {
@@ -171,11 +179,8 @@ min-width: 265px;
 }
 
 .disclosure--btn {
+font-family: inherit;
 margin: 4px 0;
-}
-
-.disclosure--icon {
-float: right;
 }
 
 .disclosure--content {
@@ -188,9 +193,9 @@ min-width: 600px;
 }
 
 .heading-small {
-color: rebeccapurple;
-font-size: .8em;
-margin: 0 0 2em;
+color: $primary-color;
+font-size: .9rem;
+margin: 0 0 1em;
 padding: 0;
 text-indent: 52px;
 }
@@ -210,7 +215,7 @@ width: 40px;
 #images, #outline, #thanks {
 
   #content {
-  font-size: .9em;
+  font-size: .9rem;
   max-width: none;
   }
 
@@ -225,7 +230,7 @@ width: 40px;
     }
 
     .loading {
-    color: rebeccapurple;
+    color: $primary-color;
     }
 
     h2, ol, .failure, .details, .stats {
